examples/sqs-worker/cdk.out/SqsWorkerExampleStack.template.json
{
 "Resources": {
  "WorkQueue94013F35": {
   "Type": "AWS::SQS::Queue",
   "Properties": {
    "MessageRetentionPeriod": 345600,
    "QueueName": "fargate-worker-queue",
    "VisibilityTimeout": 30
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/WorkQueue/Resource"
   }
  },
  "SqsWorkerFargateVpc5A366FAA": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/Resource"
   }
  },
  "SqsWorkerFargateVpcPublicSubnet1Subnet267FF789": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SqsWorkerFargateVpc5A366FAA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet1/Subnet"
   }
  },
  "SqsWorkerFargateVpcPublicSubnet1RouteTable333E1651": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SqsWorkerFargateVpc5A366FAA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet1/RouteTable"
   }
  },
  "SqsWorkerFargateVpcPublicSubnet1RouteTableAssociation3472AFD1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SqsWorkerFargateVpcPublicSubnet1RouteTable333E1651"
    },
    "SubnetId": {
     "Ref": "SqsWorkerFargateVpcPublicSubnet1Subnet267FF789"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "SqsWorkerFargateVpcPublicSubnet1DefaultRoute0224001E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "SqsWorkerFargateVpcIGW05A14790"
    },
    "RouteTableId": {
     "Ref": "SqsWorkerFargateVpcPublicSubnet1RouteTable333E1651"
    }
   },
   "DependsOn": [
    "SqsWorkerFargateVpcVPCGW65FEC8A1"
   ],
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "SqsWorkerFargateVpcPublicSubnet1EIP60F82900": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet1/EIP"
   }
  },
  "SqsWorkerFargateVpcPublicSubnet1NATGateway4B6ABCA0": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "SqsWorkerFargateVpcPublicSubnet1EIP60F82900",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "SqsWorkerFargateVpcPublicSubnet1Subnet267FF789"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "SqsWorkerFargateVpcPublicSubnet1DefaultRoute0224001E",
    "SqsWorkerFargateVpcPublicSubnet1RouteTableAssociation3472AFD1"
   ],
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet1/NATGateway"
   }
  },
  "SqsWorkerFargateVpcPublicSubnet2Subnet7EEDBCB3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SqsWorkerFargateVpc5A366FAA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet2/Subnet"
   }
  },
  "SqsWorkerFargateVpcPublicSubnet2RouteTable7C54347E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SqsWorkerFargateVpc5A366FAA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet2/RouteTable"
   }
  },
  "SqsWorkerFargateVpcPublicSubnet2RouteTableAssociationA02D3212": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SqsWorkerFargateVpcPublicSubnet2RouteTable7C54347E"
    },
    "SubnetId": {
     "Ref": "SqsWorkerFargateVpcPublicSubnet2Subnet7EEDBCB3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "SqsWorkerFargateVpcPublicSubnet2DefaultRouteB9CFC195": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "SqsWorkerFargateVpcIGW05A14790"
    },
    "RouteTableId": {
     "Ref": "SqsWorkerFargateVpcPublicSubnet2RouteTable7C54347E"
    }
   },
   "DependsOn": [
    "SqsWorkerFargateVpcVPCGW65FEC8A1"
   ],
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "SqsWorkerFargateVpcPrivateSubnet1Subnet04BBA375": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SqsWorkerFargateVpc5A366FAA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet1/Subnet"
   }
  },
  "SqsWorkerFargateVpcPrivateSubnet1RouteTableD7C3B765": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "SqsWorkerFargateVpc5A366FAA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet1/RouteTable"
   }
  },
  "SqsWorkerFargateVpcPrivateSubnet1RouteTableAssociationB941C2C8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SqsWorkerFargateVpcPrivateSubnet1RouteTableD7C3B765"
    },
    "SubnetId": {
     "Ref": "SqsWorkerFargateVpcPrivateSubnet1Subnet04BBA375"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "SqsWorkerFargateVpcPrivateSubnet1DefaultRoute9EA6A78E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "SqsWorkerFargateVpcPublicSubnet1NATGateway4B6ABCA0"
    },
    "RouteTableId": {
     "Ref": "SqsWorkerFargateVpcPrivateSubnet1RouteTableD7C3B765"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "SqsWorkerFargateVpcPrivateSubnet2Subnet15D9F66D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SqsWorkerFargateVpc5A366FAA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet2/Subnet"
   }
  },
  "SqsWorkerFargateVpcPrivateSubnet2RouteTable344284E3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "SqsWorkerFargateVpc5A366FAA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet2/RouteTable"
   }
  },
  "SqsWorkerFargateVpcPrivateSubnet2RouteTableAssociation9F39997E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "SqsWorkerFargateVpcPrivateSubnet2RouteTable344284E3"
    },
    "SubnetId": {
     "Ref": "SqsWorkerFargateVpcPrivateSubnet2Subnet15D9F66D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "SqsWorkerFargateVpcPrivateSubnet2DefaultRouteAE4AB617": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "SqsWorkerFargateVpcPublicSubnet1NATGateway4B6ABCA0"
    },
    "RouteTableId": {
     "Ref": "SqsWorkerFargateVpcPrivateSubnet2RouteTable344284E3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "SqsWorkerFargateVpcIGW05A14790": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SqsWorkerExampleStack/SqsWorker/FargateVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/IGW"
   }
  },
  "SqsWorkerFargateVpcVPCGW65FEC8A1": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "SqsWorkerFargateVpcIGW05A14790"
    },
    "VpcId": {
     "Ref": "SqsWorkerFargateVpc5A366FAA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/VPCGW"
   }
  },
  "SqsWorkerFargateVpcRestrictDefaultSecurityGroupCustomResource4AC87F27": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "SqsWorkerFargateVpc5A366FAA",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "960790261536"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "SqsWorkerFargateCluster010F9D02": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateCluster/Resource"
   }
  },
  "SqsWorkerFargateTaskDefTaskRole7A5C7991": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateTaskDef/TaskRole/Resource"
   }
  },
  "SqsWorkerFargateTaskDefTaskRoleDefaultPolicy7A5C0B5E": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "sqs:ChangeMessageVisibility",
        "sqs:DeleteMessage",
        "sqs:GetQueueAttributes",
        "sqs:GetQueueUrl",
        "sqs:ReceiveMessage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "WorkQueue94013F35",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "SqsWorkerFargateTaskDefTaskRoleDefaultPolicy7A5C0B5E",
    "Roles": [
     {
      "Ref": "SqsWorkerFargateTaskDefTaskRole7A5C7991"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateTaskDef/TaskRole/DefaultPolicy/Resource"
   }
  },
  "SqsWorkerFargateTaskDefA701C19F": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "QUEUE_URL",
        "Value": {
         "Ref": "WorkQueue94013F35"
        }
       },
       {
        "Name": "NODE_ENV",
        "Value": "production"
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Sub": "960790261536.dkr.ecr.us-east-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-960790261536-us-east-1:10733b77a42497b1b174a295722da7c3d67f57afd6501db4820c45768722ae38"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "SqsWorkerFargateLogGroupBB697A6E"
        },
        "awslogs-stream-prefix": "fargate-nodejs",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "FargateContainer",
      "WorkingDirectory": "/app"
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "SqsWorkerFargateTaskDefExecutionRoleFCCA2930",
      "Arn"
     ]
    },
    "Family": "SqsWorkerExampleStackSqsWorkerFargateTaskDefECBDCC7D",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "RuntimePlatform": {
     "CpuArchitecture": "X86_64",
     "OperatingSystemFamily": "LINUX"
    },
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "SqsWorkerFargateTaskDefTaskRole7A5C7991",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateTaskDef/Resource"
   }
  },
  "SqsWorkerFargateTaskDefExecutionRoleFCCA2930": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateTaskDef/ExecutionRole/Resource"
   }
  },
  "SqsWorkerFargateTaskDefExecutionRoleDefaultPolicy3727DF11": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": "arn:aws:ecr:us-east-1:960790261536:repository/cdk-hnb659fds-container-assets-960790261536-us-east-1"
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "SqsWorkerFargateLogGroupBB697A6E",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "SqsWorkerFargateTaskDefExecutionRoleDefaultPolicy3727DF11",
    "Roles": [
     {
      "Ref": "SqsWorkerFargateTaskDefExecutionRoleFCCA2930"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateTaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "SqsWorkerFargateLogGroupBB697A6E": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 7
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateLogGroup/Resource"
   }
  },
  "SqsWorkerFargateSecurityGroup29E1B753": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for SqsWorker",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "SqsWorkerFargateVpc5A366FAA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateSecurityGroup/Resource"
   }
  },
  "SqsWorkerFargateService0605CFC9": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "SqsWorkerFargateCluster010F9D02"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 100
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "EnableExecuteCommand": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "SqsWorkerFargateSecurityGroup29E1B753",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "SqsWorkerFargateVpcPrivateSubnet1Subnet04BBA375"
       },
       {
        "Ref": "SqsWorkerFargateVpcPrivateSubnet2Subnet15D9F66D"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "SqsWorkerFargateTaskDefA701C19F"
    }
   },
   "DependsOn": [
    "SqsWorkerFargateTaskDefTaskRoleDefaultPolicy7A5C0B5E",
    "SqsWorkerFargateTaskDefTaskRole7A5C7991"
   ],
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateService/Service"
   }
  },
  "SqsWorkerFargateServiceTaskCountTarget3A36BD40": {
   "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
   "Properties": {
    "MaxCapacity": 10,
    "MinCapacity": 1,
    "ResourceId": {
     "Fn::Join": [
      "",
      [
       "service/",
       {
        "Ref": "SqsWorkerFargateCluster010F9D02"
       },
       "/",
       {
        "Fn::GetAtt": [
         "SqsWorkerFargateService0605CFC9",
         "Name"
        ]
       }
      ]
     ]
    },
    "RoleARN": "arn:aws:iam::960790261536:role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService",
    "ScalableDimension": "ecs:service:DesiredCount",
    "ServiceNamespace": "ecs"
   },
   "DependsOn": [
    "SqsWorkerFargateTaskDefTaskRoleDefaultPolicy7A5C0B5E",
    "SqsWorkerFargateTaskDefTaskRole7A5C7991"
   ],
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateService/TaskCount/Target/Resource"
   }
  },
  "SqsWorkerFargateServiceTaskCountTargetFargateSqsScalingLowerPolicyDA81C0E1": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "SqsWorkerExampleStackSqsWorkerFargateServiceTaskCountTargetFargateSqsScalingLowerPolicy959F30AB",
    "PolicyType": "StepScaling",
    "ScalingTargetId": {
     "Ref": "SqsWorkerFargateServiceTaskCountTarget3A36BD40"
    },
    "StepScalingPolicyConfiguration": {
     "AdjustmentType": "ChangeInCapacity",
     "MetricAggregationType": "Average",
     "StepAdjustments": [
      {
       "MetricIntervalUpperBound": 0,
       "ScalingAdjustment": -1
      }
     ]
    }
   },
   "DependsOn": [
    "SqsWorkerFargateTaskDefTaskRoleDefaultPolicy7A5C0B5E",
    "SqsWorkerFargateTaskDefTaskRole7A5C7991"
   ],
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateService/TaskCount/Target/FargateSqsScaling/LowerPolicy/Resource"
   }
  },
  "SqsWorkerFargateServiceTaskCountTargetFargateSqsScalingLowerAlarm2B90C6BC": {
   "Type": "AWS::CloudWatch::Alarm",
   "Properties": {
    "AlarmActions": [
     {
      "Ref": "SqsWorkerFargateServiceTaskCountTargetFargateSqsScalingLowerPolicyDA81C0E1"
     }
    ],
    "AlarmDescription": "Lower threshold scaling alarm",
    "ComparisonOperator": "LessThanOrEqualToThreshold",
    "Dimensions": [
     {
      "Name": "QueueName",
      "Value": {
       "Fn::GetAtt": [
        "WorkQueue94013F35",
        "QueueName"
       ]
      }
     }
    ],
    "EvaluationPeriods": 1,
    "MetricName": "ApproximateNumberOfMessagesVisible",
    "Namespace": "AWS/SQS",
    "Period": 60,
    "Statistic": "Average",
    "Threshold": 0
   },
   "DependsOn": [
    "SqsWorkerFargateTaskDefTaskRoleDefaultPolicy7A5C0B5E",
    "SqsWorkerFargateTaskDefTaskRole7A5C7991"
   ],
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateService/TaskCount/Target/FargateSqsScaling/LowerAlarm/Resource"
   }
  },
  "SqsWorkerFargateServiceTaskCountTargetFargateSqsScalingUpperPolicy5EF9DB1C": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "SqsWorkerExampleStackSqsWorkerFargateServiceTaskCountTargetFargateSqsScalingUpperPolicy8C7D0D30",
    "PolicyType": "StepScaling",
    "ScalingTargetId": {
     "Ref": "SqsWorkerFargateServiceTaskCountTarget3A36BD40"
    },
    "StepScalingPolicyConfiguration": {
     "AdjustmentType": "ChangeInCapacity",
     "MetricAggregationType": "Average",
     "StepAdjustments": [
      {
       "MetricIntervalLowerBound": 0,
       "MetricIntervalUpperBound": 10,
       "ScalingAdjustment": 1
      },
      {
       "MetricIntervalLowerBound": 10,
       "MetricIntervalUpperBound": 30,
       "ScalingAdjustment": 2
      },
      {
       "MetricIntervalLowerBound": 30,
       "ScalingAdjustment": 3
      }
     ]
    }
   },
   "DependsOn": [
    "SqsWorkerFargateTaskDefTaskRoleDefaultPolicy7A5C0B5E",
    "SqsWorkerFargateTaskDefTaskRole7A5C7991"
   ],
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateService/TaskCount/Target/FargateSqsScaling/UpperPolicy/Resource"
   }
  },
  "SqsWorkerFargateServiceTaskCountTargetFargateSqsScalingUpperAlarmBEDD465E": {
   "Type": "AWS::CloudWatch::Alarm",
   "Properties": {
    "AlarmActions": [
     {
      "Ref": "SqsWorkerFargateServiceTaskCountTargetFargateSqsScalingUpperPolicy5EF9DB1C"
     }
    ],
    "AlarmDescription": "Upper threshold scaling alarm",
    "ComparisonOperator": "GreaterThanOrEqualToThreshold",
    "Dimensions": [
     {
      "Name": "QueueName",
      "Value": {
       "Fn::GetAtt": [
        "WorkQueue94013F35",
        "QueueName"
       ]
      }
     }
    ],
    "EvaluationPeriods": 1,
    "MetricName": "ApproximateNumberOfMessagesVisible",
    "Namespace": "AWS/SQS",
    "Period": 60,
    "Statistic": "Average",
    "Threshold": 10
   },
   "DependsOn": [
    "SqsWorkerFargateTaskDefTaskRoleDefaultPolicy7A5C0B5E",
    "SqsWorkerFargateTaskDefTaskRole7A5C7991"
   ],
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/SqsWorker/FargateService/TaskCount/Target/FargateSqsScaling/UpperAlarm/Resource"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:960790261536:security-group/",
             {
              "Fn::GetAtt": [
               "SqsWorkerFargateVpc5A366FAA",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-960790261536-us-east-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/11R0W7bMAz8lr4rGpIN2HPmbkWAYfPsoa8FozAuG1n0RCpBYPjfB9lJnPaJp9OJuDut7OrzV7t8gJMs3O6w8LS1fa3gDgZO8tLLP7H9n4QJTbEPIxgMupXtnzuXqeeyMGXaenJ12gbUzM2o4qT4F7YeZ37m1iLsCJQ43MQZfN+UefwCfQLFE5xNGekIivPiTVCMAW+CycnltFYF99piUFOjS5H0/BQ5daOHeyJHEdsXPolizNdX+ANiA9mmHB5xT4GuJj8yHBQoYLzjLm9rjEdyU/ALrB34HDwvKTgFHQxBa/uKp4LGWbInNyaaUDYZX0AEVewjuwPGTQtNbg8139kKOxZSjudvIGg8N2L7n9zcQl/xYKDrPLmxckjK4sBTaGw/O4vN5RPfM7ViV0/qi8E7Zu2u9byTDMZ5TrsTqHu1/dpDbLNmBMNgKhROMTeURLmdj/tww [...]
   },
   "Metadata": {
    "aws:cdk:path": "SqsWorkerExampleStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "QueueUrl": {
   "Description": "SQS Queue URL",
   "Value": {
    "Ref": "WorkQueue94013F35"
   }
  },
  "QueueName": {
   "Description": "SQS Queue Name",
   "Value": {
    "Fn::GetAtt": [
     "WorkQueue94013F35",
     "QueueName"
    ]
   }
  },
  "ServiceArn": {
   "Description": "Fargate Service ARN",
   "Value": {
    "Ref": "SqsWorkerFargateService0605CFC9"
   }
  },
  "ClusterName": {
   "Description": "ECS Cluster Name",
   "Value": {
    "Ref": "SqsWorkerFargateCluster010F9D02"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
